welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:15: error: illegal character '\u202f'
 while(!estFaceMur){
^