welcome.lessons.welcome.loopfor.LoopCourse.scala.code
while(!estFaceMur){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse();
}
gauche();
while(!estFaceMur){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse();
}
gauche();
 while(!estFaceMur){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse();
}
gauche();
while(!estFaceMur){
	leveBrosse();
	setCouleurBrosse(Color.red);
	avance();
	baisseBrosse();
}